--- a/templates/index.html
+++ b/templates/index.html
@@ -17,7 +17,12 @@
 
   <title>Title page</title>  
 
-<link href="./static/main.3f6952e4.css" rel="stylesheet"></head>
+  <link href="./static/main.3f6952e4.css" rel="stylesheet"></head>
+  <style>
+    .navbar-nav li a{
+      color: #ffffff !important;
+    }
+  </style>
 
 <body class="minimal">
 <div id="site-border-left"></div>
@@ -50,7 +55,7 @@
   </nav>
 </header>
 <!-- Add your site or app content here -->
-  <div class="hero-full-container background-image-container white-text-container" style="background-image: url('./static/assets/images/space.jpg')">
+  <div class="hero-full-container background-image-container white-text-container" style="background-image: url('./static/assets/images/workspace2.jpg')">
     <div class="container">
       <div class="row">
         <div class="col-xs-12">
@@ -60,7 +65,7 @@
                 <span id="typed-strings">
                   <span>I'm Alf Fenton</span>
                   <span>I'm a Python Developer</span>
-                  <span>Working as a Freelance</span>
+                  <span>I work as a Freelancer</span>
                 </span>
                 <span id="typed"></span>
               </h1>
