--- a/templates/contact.html
+++ b/templates/contact.html
@@ -91,7 +91,7 @@
                           <span class="fa-icon">
                             <i class="fa fa fa-map-marker" aria-hidden="true"></i>
                           </span>
-                          42 rue Moulbert 75016 Paris
+                          U.S.A
                         </li>
                       </ul>
                       <h3>Follow me on social networks</h3>
@@ -101,7 +101,7 @@
                       <a href="http://www.twitter.com" title="" class="fa-icon">
                         <i class="fa fa-twitter"></i>
                       </a>
-                      <a href="http://www.linkedin.com" title="" class="fa-icon">
+                      <a href="https://www.linkedin.com/in/alf-fenton-baab27110/" title="" class="fa-icon">
                         <i class="fa fa-linkedin"></i>
                       </a>
 
