changed homepage text

--- a/templates/index.html
+++ b/templates/index.html
@@ -63,7 +63,7 @@
               <h1>Hello,<br>
                 <span id="typed-strings">
                   <span>I'm Alf Fenton</span>
-                  <span>I'm a Python Developer</span>
+                  <span>I'm a javascript & Python Developer</span>
                   <span>I work as a Freelancer</span>
                 </span>
                 <span id="typed"></span>
