Adjusted work and works section

--- a/templates/work3.html
+++ b/templates/work3.html
@@ -45,9 +45,9 @@
 
 
           <ul class="nav navbar-nav navbar-right navbar-small visible-md visible-lg">
-            <li><a href="./index.html" title="Fyyur" class="active">001</a></li>
-            <li><a href="./index.html" title="" class="active">002</a></li>
-            <li><a href="./index.html" title="">003</a></li>
+            <li><a href="./work.html" title="Fyyur" class="active">001</a></li>
+            <li><a href="./work2.html" title="Murmur" class="active">002</a></li>
+            <li><a href="./work3.html" title="Face Recognizer" class="active">003</a></li>
             <li><a href="./index.html" title="">004</a></li>
             <li><a href="./index.html" title="">005</a></li>
             <li><a href="./index.html" title="">006</a></li>
@@ -62,14 +62,12 @@
   <div class="container">
     <div class="row">
       <div class="col-xs-12">
-        <img src="./static/assets/images/Fyyur.jpg" class="img-responsive" alt="">
+        <img src="./static/assets/images/Face-Recognizer.jpg" class="img-responsive" alt="">
         <div class="card-container">
           <div class="text-center">
-            <h1 class="h2">001 : Fyyur</h1>
+            <h1 class="h2">003 : Face-Recognizer</h1>
           </div>
-          <p>Fyyur is a musical venue and artist booking site that facilitates the discovery and bookings of shows between local performing artists and venues. This site lets you list new artists and venues, discover them, and list shows with artists as a venue owner.
-
-            Your job is to build out the data models to power the API endpoints for the Fyyur site by connecting to a PostgreSQL database for storing, querying, and creating information about artists and venues on Fyyur.</p>
+          <p>Twitter clone made with javascript, react, node, and hosted on heroku</p>
 
         </div>
       </div>
@@ -90,7 +88,7 @@
         <div>
           <p>
             <h3>Tech Stack</h1>
-            <h4>Fyyur's Tech Stack includes:</h3>
+            <h4>Face Recognizer Tech Stack includes:</h3>
               <ul>
                 <li>SQLAlchemy ORM</li>
                 <li>PostgreSQL as our database</li>
