--- a/templates/works.html
+++ b/templates/works.html
@@ -69,8 +69,8 @@
                 <div class="row">
                     <div class="col-sm-4">
 
-                      <a href="./work.html" title="" class="black-image-project-hover">
-                        <img src="./static/assets/images/work01-hover.jpg" alt="" class="img-responsive">
+                      <a href="./work.html" title="" class="">
+                        <img src="./static/assets/images/Fyyur.jpg" alt="" class="img-responsive">
                       </a>
                       <div class="card-container card-container-lg">
                         <h4>001/006</h4>
@@ -80,25 +80,25 @@
                       </div>
                     </div>
                     <div class="col-sm-4">
-                      <a href="./work.html" title="" class="black-image-project-hover">
-                        <img src="./static/assets/images/work02-hover.jpg" alt="" class="img-responsive">
+                      <a href="./work2.html" title="" class="">
+                        <img src="./static/assets/images/Mumur2.jpg" alt="" class="img-responsive">
                       </a>
                       <div class="card-container card-container-lg">
                         <h4>002/006</h4>
                         <h3>Murmur</h3>
                         <p>Twitter clone made with javascript, react, node, and hosted on heroku</p>
-                        <a href="./work.html" title="" class="btn btn-default">Discover</a>
+                        <a href="./work2.html" title="" class="btn btn-default">Discover</a>
                       </div>
                     </div>
                     <div class="col-sm-4">
-                      <a href="./work.html" title="" class="black-image-project-hover">
-                        <img src="./static/assets/images/work03-hover.jpg" alt="" class="img-responsive">
+                      <a href="./work3.html" title="" class="">
+                        <img src="./static/assets/images/Face-Recognizer.jpg" alt="" class="img-responsive">
                       </a>
                       <div class="card-container card-container-lg">
                         <h4>003/006</h4>
                         <h3>Face Recognizer</h3>
                         <p>Web application that recognizes faces in an image</p>
-                        <a href="./work.html" title="" class="btn btn-default">Discover</a>
+                        <a href="./work3.html" title="" class="btn btn-default">Discover</a>
                       </div>
                     </div>
                     
