Completed the implementation of work pages

--- a/templates/index.html
+++ b/templates/index.html
@@ -64,7 +64,7 @@
                 <span id="typed-strings">
                   <span>I'm Alf Fenton</span>
                   <span>I'm a JavaScript & Python Developer</span>
-                  <span>I work as a Freelancer</span>
+                  <!-- <span>I work as a Freelancer</span> -->
                 </span>
                 <span id="typed"></span>
               </h1>
