--- a/templates/work2.html
+++ b/templates/work2.html
@@ -45,12 +45,12 @@
 
 
           <ul class="nav navbar-nav navbar-right navbar-small visible-md visible-lg">
-            <li><a href="./index.html" title="Fyyur" class="active">001</a></li>
-            <li><a href="./index.html" title="" class="active">002</a></li>
-            <li><a href="./index.html" title="">003</a></li>
-            <li><a href="./index.html" title="">004</a></li>
-            <li><a href="./index.html" title="">005</a></li>
-            <li><a href="./index.html" title="">006</a></li>
+            <li><a href="./work.html" title="Fyyur" class="active">001</a></li>
+            <li><a href="./work2.html" title="Murmur" class="active">002</a></li>
+            <li><a href="./work3.html" title="Face Recognie">003</a></li>
+            <li><a href="./index.html" title="" class="active">004</a></li>
+            <li><a href="./index.html" title="" class="active">005</a></li>
+            <li><a href="./index.html" title="" class="active">006</a></li>
           </ul>
 
 
@@ -77,11 +77,11 @@
       <div class="col-md-8 col-md-offset-2 section-container-spacer">
         <div class="row">
           <div class="col-xs-12 col-md-6">
-            <img src="./static/assets/images/work001-02.jpg" class="img-responsive" alt="">
+            <img src="./static/assets/images/murmur3.jpg" class="img-responsive" alt="">
             <p>Menphis skyline</p>
           </div>
           <div class="col-xs-12 col-md-6">
-            <img src="./static/assets/images/work001-03.jpg" class="img-responsive" alt="">
+            <img src="./static/assets/images/murmur4.jpg" class="img-responsive" alt="">
             <p>Menphis skyline</p>
           </div>
         </div> 
@@ -91,17 +91,16 @@
             <h4>Murmur's Tech Stack includes:</h3>
               <ul>
                 <li>SQLAlchemy ORM</li>
-                <li>PostgreSQL as our database</li>
-                <li>Python3 and Flask as our server language and server framework</li>
-                <li>Flask-Migrate for creating and running schema migrations</li>
-                <li>HTML, CSS, and Javascript with Bootstrap 3 for our website's frontend</li>
+                <li>MongoDb as the database</li>
+                <li>Javascript and Node as our server language and server framework</li>
+                <li>HTML, CSS, and React.js with Bootstrap 3 for our website's frontend</li>
               </ul>
           </p>
         </div>
       </div>
 
       <div class="col-xs-12">
-        <img src="./static/assets/images/Fyyur.gif" class="img-responsive" alt="">
+        <img src="./static/assets/images/Murmur_tweet.gif" class="img-responsive" alt="">
         <div>
           <a href="https://github.com/FentonA">Github</a>
         </div>
