--- a/templates/work3.html
+++ b/templates/work3.html
@@ -48,9 +48,9 @@
             <li><a href="./work.html" title="Fyyur" class="active">001</a></li>
             <li><a href="./work2.html" title="Murmur" class="active">002</a></li>
             <li><a href="./work3.html" title="Face Recognizer" class="active">003</a></li>
-            <li><a href="./index.html" title="">004</a></li>
-            <li><a href="./index.html" title="">005</a></li>
-            <li><a href="./index.html" title="">006</a></li>
+            <li><a href="./work4.html" title="" class="active">004</a></li>
+            <li><a href="./work5.html" title="" class="active">005</a></li>
+            <li><a href="./work6.html" title="" class="active">006</a></li>
           </ul>
 
 
@@ -67,8 +67,8 @@
           <div class="text-center">
             <h1 class="h2">003 : Face-Recognizer</h1>
           </div>
-          <p>Twitter clone made with javascript, react, node, and hosted on heroku</p>
-
+          <p>Built with Javascript and React.js. this project makes use of the 'Clarifai' Api to recognize faces on any picture.</p>
+          <p>To use Face Recognizer, please had on over to this link(https://smart-cerebrum.herokuapp.com/), create an account and log in. After doing so, you'll be able to paste in your pictures with a link and the application will recognze any faces within the picture as well keep score.</p>
         </div>
       </div>
 
@@ -77,31 +77,31 @@
       <div class="col-md-8 col-md-offset-2 section-container-spacer">
         <div class="row">
           <div class="col-xs-12 col-md-6">
-            <img src="./static/assets/images/work001-02.jpg" class="img-responsive" alt="">
-            <p>Menphis skyline</p>
+            <img src="./static/assets/images/face-recog2.jpg" class="img-responsive" alt="">
+           
           </div>
           <div class="col-xs-12 col-md-6">
-            <img src="./static/assets/images/work001-03.jpg" class="img-responsive" alt="">
-            <p>Menphis skyline</p>
+            <img src="./static/assets/images/face-recog.jpg" class="img-responsive" alt="">
+          
           </div>
         </div> 
         <div>
           <p>
             <h3>Tech Stack</h1>
-            <h4>Face Recognizer Tech Stack includes:</h3>
+            <h4>Face Recognizer's Tech Stack includes:</h3>
               <ul>
                 <li>SQLAlchemy ORM</li>
-                <li>PostgreSQL as our database</li>
-                <li>Python3 and Flask as our server language and server framework</li>
-                <li>Flask-Migrate for creating and running schema migrations</li>
-                <li>HTML, CSS, and Javascript with Bootstrap 3 for our website's frontend</li>
+                <li>MongoDb as our database</li>
+                <li>Javascript as the server language </li>
+                <li>Clarifai Api for the face recognizer logic</li>
+                <li>HTML, CSS, and React.js for the frontend</li>
               </ul>
           </p>
         </div>
       </div>
 
       <div class="col-xs-12">
-        <img src="./static/assets/images/Fyyur.gif" class="img-responsive" alt="">
+        <img src="./static/assets/images/face-recog.gif" class="img-responsive" alt="">
         <div>
           <a href="https://github.com/FentonA">Github</a>
         </div>
@@ -116,7 +116,7 @@
   <div class="container">
     <div class="row">
       <div class="col-xs-12">
-        <p>© UNTITLED | Website created with <a href="http://www.mashup-template.com/" title="Create website with free html template">Mashup Template</a>/<a href="https://www.unsplash.com/" title="Beautiful Free Images">Unsplash</a></p>
+       
       </div>
     </div>
   </div>
