--- a/templates/works.html
+++ b/templates/works.html
@@ -56,7 +56,7 @@
       <div class="col-sm-8 col-sm-offset-2 section-container-spacer">
         <div class="text-center">
           <h1 class="h2">02 : Works</h1>
-          <p>Nulla facilisi. Vivamus vestibulum, elit in scelerisque ultricies, nisl nunc pulvinar ligula, id sodales arcu sapien in nisi. Quisque libero enim, mattis non augue posuere, venenatis dapibus urna.</p>
+          <p>Below are just a few full stack projects that I've worked</p>
         </div>
       </div>
 
@@ -76,7 +76,7 @@
                         <h4>001/006</h4>
                         <h3>Fyyur</h3>
                         <p>Artist and Venue Booking App.</p>
-                        <a href="" title="" class="btn btn-default">Discover</a>
+                        <a href="./work.html" title="" class="btn btn-default">Discover</a>
                       </div>
                     </div>
                     <div class="col-sm-4">
@@ -109,37 +109,37 @@
             <div class="item">
                 <div class="row">
                   <div class="col-sm-4">
-                    <a href="./work.html" class="black-image-project-hover">
-                      <img src="./static/assets/images/work02-hover.jpg" alt="Image" class="img-responsive">
+                    <a href="./work4.html" class="">
+                      <img src="./static/assets/images/music.jpg" alt="Image" class="img-responsive">
                     </a>
                     <div class="card-container">
                       <h4>004/006</h4>
-                      <h3>Nulla scelerisque</h3>
-                      <p>Proin pharetra metus id iaculis dignissim. In aliquet lorem ut ex ullamcorper.</p>
-                      <a href="./work.html" class="btn btn-default">Discover</a>
+                      <h3>Music Hub</h3>
+                      <p>A user-based lyric trsanlation website</p>
+                      <a href="./work4.html" class="btn btn-default">Discover</a>
                     </div>
                   </div>
                    <div class="col-sm-4">
-                      <a href="./work.html" class="black-image-project-hover">
-                        <img src="./static/assets/images/work01-hover.jpg" alt="Image" class="img-responsive">
+                      <a href="./work5.html" class="">
+                        <img src="./static/assets/images/Coffee.jpg" alt="Image" class="img-responsive">
                       </a>
                       <div class="card-container">
                         <h4>005/006</h4>
-                        <h3>Fringilla sit amet</h3>
+                        <h3>Coffee Shop</h3>
                         <p>Nulla facilisi. Vivamus vestibulum, elit in scelerisque ultricies.</p>
-                        <a href="./work.html" class="btn btn-default">Discover</a>
+                        <a href="./work5.html" class="btn btn-default">Discover</a>
                       </div>
                     </div>
                     
                     <div class="col-sm-4">
-                      <a href="./work.html" class="black-image-project-hover">
-                        <img src="./static/assets/images/work03-hover.jpg" alt="Image" class="img-responsive">
+                      <a href="./work6.html" class="">
+                        <img src="./static/assets/images/udee.jpg" alt="Image" class="img-responsive">
                       </a>
                       <div class="card-container">
                         <h4>006/006</h4>
-                        <h3>Vivamus vestibulum</h3>
-                        <p>Fusce sed hendrerit augue, a rhoncus velit. In non lorem mattis, tempor sem sit amet.</p>
-                        <a href="./work.html" class="btn btn-default">Discover</a>
+                        <h3>React E-Commerce App</h3>
+                        <p>E-commerce shop built using React.js, and Stripe api </p>
+                        <a href="./work6.html" class="btn btn-default">Discover</a>
                       </div>
                     </div>
                     
@@ -171,7 +171,7 @@
   <div class="container">
     <div class="row">
       <div class="col-xs-12">
-        <p>© UNTITLED | Website created with <a href="http://www.mashup-template.com/" title="Create website with free html template">Mashup Template</a>/<a href="https://www.unsplash.com/" title="Beautiful Free Images">Unsplash</a></p>
+        
       </div>
     </div>
   </div>
