--- a/templates/work.html
+++ b/templates/work.html
@@ -45,12 +45,12 @@
 
 
           <ul class="nav navbar-nav navbar-right navbar-small visible-md visible-lg">
-            <li><a href="./index.html" title="Fyyur" class="active">001</a></li>
-            <li><a href="./index.html" title="" class="active">002</a></li>
-            <li><a href="./index.html" title="">003</a></li>
-            <li><a href="./index.html" title="">004</a></li>
-            <li><a href="./index.html" title="">005</a></li>
-            <li><a href="./index.html" title="">006</a></li>
+            <li><a href="./work.html" title="Fyyur" class="active">001</a></li>
+            <li><a href="./work2.html" title="" class="active">002</a></li>
+            <li><a href="./work3.html" title="" class="active">003</a></li>
+            <li><a href="./work4.html" title="" class="active">004</a></li>
+            <li><a href="./work5.html" title="" class="active">005</a></li>
+            <li><a href="./work6.html" title="" class="active">006</a></li>
           </ul>
 
 
@@ -79,12 +79,12 @@
       <div class="col-md-8 col-md-offset-2 section-container-spacer">
         <div class="row">
           <div class="col-xs-12 col-md-6">
-            <img src="./static/assets/images/work001-02.jpg" class="img-responsive" alt="">
-            <p>Menphis skyline</p>
+            <img src="./static/assets/images/fyyur2.jpg" class="img-responsive" alt="">
+            
           </div>
           <div class="col-xs-12 col-md-6">
-            <img src="./static/assets/images/work001-03.jpg" class="img-responsive" alt="">
-            <p>Menphis skyline</p>
+            <img src="./static/assets/images/fyyur1.jpg" class="img-responsive" alt="">
+            
           </div>
         </div> 
         <div>
@@ -118,7 +118,7 @@
   <div class="container">
     <div class="row">
       <div class="col-xs-12">
-        <p>© UNTITLED | Website created with <a href="http://www.mashup-template.com/" title="Create website with free html template">Mashup Template</a>/<a href="https://www.unsplash.com/" title="Beautiful Free Images">Unsplash</a></p>
+       
       </div>
     </div>
   </div>
