Implemented About me Text

--- a/templates/about.html
+++ b/templates/about.html
@@ -61,16 +61,25 @@
             <div class="col-md-10 col-md-offset-1">
               <div class="row">
                 <div class="col-xs-12 col-md-6">
-                  <h3>Consectetur adipiscing elit</h3>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas luctus at sem quis varius. 
-                  Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Cras ultrices hendrerit nisl.</p>
-                  <h3>Ut enim ad minim </h3>
-                  <p>Duis aute irure dolor in reprehenderit in voluptate velit esse
-                  cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-                  proident, sunt in culpa qui officia deserunt mollit anim id est laborum. 
-                  <h3>Maecenas luctus at sem quis varius</h3>
+                  <h3>Who am I?</h3>
+                  <p>I’m a driven and passionate developer with a deep love for computer science, that’s looking to help solve problems. I like to spend most of my time free time on online developer forums like Codepen and StackOverflow, learning new things to incorporate into my applications, interacting with other developers, and tinkering with code.</p>
+                  <p>My background in computer science coupled with my passion for learning and resovle to self-improveme will make me a valuable asset for any team</p>
+                  <h3>Tech Stack </h3>
+                  <p> While I am comfortable in learning to use any technology, 
+                    I focus most on using Javascript CSS/SCSS, and React.js to build the front end of a website or project. I implement the backend using Python as a server language or to build an API that Front end can connect to.
+                     Along with python, I'm most familiar with Django and Flask as server frameworks, and PostgreSQL and MongoDB for the databases. 
+                     For deployment, I use Git, Heroku, and AWS Kubernetes :)
+
+                  <h3>Links</h3>
                   <p>
-                  Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Phasellus iaculis magna sagittis elit sagittis, at hendrerit lorem venenatis. Morbi accumsan iaculis blandit. Cras ultrices hendrerit nisl.</p>
+                    <ul>
+                      <li><a href=" https://www.linkedin.com/in/alf-fenton-baab27110/">LinkedIn</a></li>
+                      <li> <a href="https://twitter.com/row_valle">Twitter</a> </li>
+                      <li> <a href="https://www.instagram.com/head_in_clouds7/">Instagram</a></li>
+                      
+
+                    </ul>
+                  </p>
                 </div>
                 <div class="col-xs-12 col-md-6">
                   <img src="./static/assets/images/profil.jpg" class="img-responsive" alt="">
@@ -90,7 +99,7 @@
   <div class="container">
     <div class="row">
       <div class="col-xs-12">
-        <p>© UNTITLED | Website created with <a href="http://www.mashup-template.com/" title="Create website with free html template">Mashup Template</a>/<a href="https://www.unsplash.com/" title="Beautiful Free Images">Unsplash</a></p>
+       
       </div>
     </div>
   </div>
