--- a/templates/works.html
+++ b/templates/works.html
@@ -110,7 +110,7 @@
                 <div class="row">
                   <div class="col-sm-4">
                     <a href="./work4.html" class="">
-                      <img src="./static/assets/images/music.jpg" alt="Image" class="img-responsive">
+                      <img src="./static/assets/images/Music.jpg" alt="Image" class="img-responsive">
                     </a>
                     <div class="card-container">
                       <h4>004/006</h4>
@@ -126,7 +126,7 @@
                       <div class="card-container">
                         <h4>005/006</h4>
                         <h3>Coffee Shop</h3>
-                        <p>Nulla facilisi. Vivamus vestibulum, elit in scelerisque ultricies.</p>
+                        <p>Web app integrated with Auth0 for user authentication</p>
                         <a href="./work5.html" class="btn btn-default">Discover</a>
                       </div>
                     </div>
