--- a/templates/work2.html
+++ b/templates/work2.html
@@ -47,10 +47,10 @@
           <ul class="nav navbar-nav navbar-right navbar-small visible-md visible-lg">
             <li><a href="./work.html" title="Fyyur" class="active">001</a></li>
             <li><a href="./work2.html" title="Murmur" class="active">002</a></li>
-            <li><a href="./work3.html" title="Face Recognie">003</a></li>
-            <li><a href="./index.html" title="" class="active">004</a></li>
-            <li><a href="./index.html" title="" class="active">005</a></li>
-            <li><a href="./index.html" title="" class="active">006</a></li>
+            <li><a href="./work3.html" title="Face Recognie" class="active">003</a></li>
+            <li><a href="./work4.html" title="" class="active">004</a></li>
+            <li><a href="./work5.html" title="" class="active">005</a></li>
+            <li><a href="./work6.html" title="" class="active">006</a></li>
           </ul>
 
 
