included blockchain changes

--- a/templates/about.html
+++ b/templates/about.html
@@ -62,19 +62,18 @@
               <div class="row">
                 <div class="col-xs-12 col-md-6">
                   <h3>Who am I?</h3>
-                  <p>I’m a driven and passionate developer with a deep love for computer science, that’s looking to help solve problems. I like to spend most of my time free time on online developer forums like Codepen and StackOverflow, learning new things to incorporate into my applications, interacting with other developers, and tinkering with code.</p>
-                  <p>My background in computer science coupled with my passion for learning and resovle to self-improveme will make me a valuable asset for any team</p>
+                  <p>I’m a driven and passionate developer with a deep love for the blockchain and web development ecosystem, that’s looking to help solve problems through digitized services. I like to spend most of my time free time on online developer forums like Codepen and StackOverflow, learning new things to incorporate into my applications, interacting with other developers, and tinkering with code.</p>
+                  <p>My background in computer science coupled with my passion for learning and constant resovle to self-improve will make me a valuable asset on any team or projecf/p>
                   <h3>Tech Stack </h3>
                   <p> While I am comfortable in learning to use any technology, 
-                    I focus most on using Javascript CSS/SCSS, and React.js to build the front end of a website or project. I implement the backend using Python as a server language or to build an API that Front end can connect to.
-                     Along with python, I'm most familiar with Django and Flask as server frameworks, and PostgreSQL and MongoDB for the databases. 
-                     For deployment, I use Git, Heroku, and AWS Kubernetes :)
+                    I focus most on using Javascript CSS/SCSS, and React.js to build the front end of a website or project. I implement the backend using Node.js Python as a server language or to build an API that Front end can connect to.
+                     Along with python, I'm most familiar with Django and Flask as server frameworks, and PostgreSQL and MongoDB for the databases. I code smart contracts using solidity, and leverage web3.js, truffle, and metamask to integrate to itnerface the ehtereum blokchain network.
+                     I deploy projects and digitized profucst onto ipfs servers, heroku and AWS:)
 
                   <h3>Links</h3>
                   <p>
                     <ul>
                       <li><a href=" https://www.linkedin.com/in/alf-fenton-baab27110/">LinkedIn</a></li>
-                      <li> <a href="https://twitter.com/row_valle">Twitter</a> </li>
                       <li> <a href="https://www.instagram.com/head_in_clouds7/">Instagram</a></li>
                       
 
