--- a/templates/index.html
+++ b/templates/index.html
@@ -60,14 +60,34 @@
         <div class="col-xs-12">
           <div class="hero-full-wrapper">
             <div class="text-content">
-              <h1>Hello,<br>
+              <h1>
                 <span id="typed-strings">
-                  <span>I'm Alf Fenton</span>
-                  <span>I'm a JavaScript & Python Developer</span>
+                  <span>Hello, my name is Alf Fenton</span>
+                  <span>I'm a Blockchain Developer</span>
+                  <span> I develop intuitive dApps and Smart Contracts</span>
                   <!-- <span>I work as a Freelancer</span> -->
+
+                  <span> こんにちは,</span>
+                  <span>私の名前はアルフフェントン</span>
+                  <span>ブロックチェーン開発者です</span>
+                  <span> 
+                    直感的なdAppとスマートコントラクトを開発します</span>
+                  <!-- <span>I work as a Freelancer</span> -->
+                  <span>안녕하세요,</span>
+                  <span>
+                    제 이름은 Alf Fenton입니다.</span>
+                  <span>저는 블록 체인 개발자입니다</span>
+                  <span> 
+                    직관적 인 dApp과 스마트 계약을 개발합니다.</span>
+                  <!-- <span>I work as a Freelancer</span> --> 
+                  <span>สวัสดีครับ</span>                 
+                  <span>ผมชื่ออัลฟ์ เฟนตัน</span>
+                  <span>ผมเป็นนักพัฒนาบล็อกเชน</span>
+                  <span> ผมพัฒนา dApps และ Smart Contracts ที่ใช้งานง่าย</span>
                 </span>
                 <span id="typed"></span>
-              </h1>
+                </h1>
+                  <!-- <span>I work as a Freelancer</span> -->
             </div>
           </div>
         </div>
