added more blochain projects, fleshed out details

--- a/templates/works.html
+++ b/templates/works.html
@@ -15,7 +15,7 @@
   <link rel="apple-touch-icon" sizes="180x180" href="./static/assets/apple-icon-180x180.png">
   <link href="./static/assets/favicon.ico" rel="icon">
 
-  <title>Title page</title>  
+  <title>Portfolio</title>  
 
 <link href="./static/main.3f6952e4.css" rel="stylesheet"></head>
 
@@ -38,7 +38,8 @@
       <div class="collapse navbar-collapse" id="navbar-collapse">
         <ul class="nav navbar-nav ">
           <li><a href="./index.html" title="">01 : Home</a></li>
-          <li><a href="./works.html" title="">02 : Works</a></li>
+          <li><a href="./services.html" title="">01 : Services</a></li>
+          <li><a href="./works.html" title="">02 : Portfolio</a></li>
           <li><a href="./about.html" title="">03 : About me</a></li>
           <li><a href="./contact.html" title="">04 : Contact</a></li>
         </ul>
@@ -56,7 +57,7 @@
       <div class="col-sm-8 col-sm-offset-2 section-container-spacer">
         <div class="text-center">
           <h1 class="h2">02 : Works</h1>
-          <p>Below are just a few full stack projects that I've worked</p>
+          <p>Below are just a few full stack projects Blockchain projects that I've built</p>
         </div>
       </div>
 
@@ -64,41 +65,42 @@
      
       <div id="myCarousel" class="carousel slide projects-carousel">
         <!-- Carousel items -->
-        <div class="carousel-inner">
             <div class="item active">
                 <div class="row">
                     <div class="col-sm-4">
 
-                      <a href="./work.html" title="" class="">
-                        <img src="./static/assets/images/Fyyur.jpg" alt="" class="img-responsive">
+                      <a href="./roller-real-estate.html" title="" class="">
+                        <img src="./static/assets/images/jason-dent-w3eFhqXjkZE-unsplash.jpeg" alt="" class="img-responsive">
                       </a>
                       <div class="card-container card-container-lg">
                         <h4>001/006</h4>
-                        <h3>Fyyur</h3>
-                        <p>Artist and Venue Booking App.</p>
-                        <a href="./work.html" title="" class="btn btn-default">Discover</a>
+                        <h3>Roller Real Estate</h3>
+                        <p>Real Estate Marketplace with personalized Erc20 token on the Ethereum Network</p>
+                        <a href="./roller-real-estate.html" title="" class="btn btn-default">Discover</a>
                       </div>
                     </div>
                     <div class="col-sm-4">
-                      <a href="./work2.html" title="" class="">
-                        <img src="./static/assets/images/Mumur2.jpg" alt="" class="img-responsive">
+                      <a href="./supply-chain.html" title="" class="">
+                        <img src="./static/assets/images/timelab-pro-CfKV0CecnU8-unsplash.jpeg" alt="" class="img-responsive">
                       </a>
                       <div class="card-container card-container-lg">
                         <h4>002/006</h4>
-                        <h3>Murmur</h3>
-                        <p>Twitter clone made with javascript, react, node, and hosted on heroku</p>
-                        <a href="./work2.html" title="" class="btn btn-default">Discover</a>
+                        <h3>Decentralized Supply Chain</h3>
+                        <p>This project project provides a supply chain solution integrated with the Ethereum network</p>
+                        <!-- <p>It features smart contracts that provides the ability to track user specific permission controls throughout the supply chain</p>
+                        <p>It also includes smart contracts that helps track and verify a products authenticity.</p> -->
+                        <a href="./supply-chain.html" title="" class="btn btn-default">Discover</a>
                       </div>
                     </div>
                     <div class="col-sm-4">
-                      <a href="./work3.html" title="" class="">
-                        <img src="./static/assets/images/Face-Recognizer.jpg" alt="" class="img-responsive">
+                      <a href="./flight-surety.html" title="" class="">
+                        <img src="./static/assets/images/s-o-c-i-a-l-c-u-t-96A9UTFAMUM-unsplash.jpeg" alt="" class="img-responsive">
                       </a>
                       <div class="card-container card-container-lg">
                         <h4>003/006</h4>
-                        <h3>Face Recognizer</h3>
+                        <h3>Flight Surety</h3>
                         <p>Web application that recognizes faces in an image</p>
-                        <a href="./work3.html" title="" class="btn btn-default">Discover</a>
+                        <a href="./flight-surety.html" title="" class="btn btn-default">Discover</a>
                       </div>
                     </div>
                     
@@ -108,6 +110,28 @@
             <!--/item-->
             <div class="item">
                 <div class="row">
+                  <div class="col-sm-4">
+                    <a href="./decentralized-ecommerce.html" class="">
+                      <img src="./static/assets/images/udee.jpg" alt="Image" class="img-responsive">
+                    </a>
+                    <div class="card-container">
+                      <h4>006/006</h4>
+                      <h3>Decentralized E-commerce Dapp</h3>
+                      <p>E-commerce shop built using React.js, and Stripe api </p>
+                      <a href="./decentralized-ecommerce.html" class="btn btn-default">Discover</a>
+                    </div>
+                  </div>
+                  <div class="col-sm-4">
+                    <a href="./crypto-wallet.html" class="">
+                      <img src="./static/assets/images/bermix-studio-aX1hN4uNd-I-unsplash.jpeg" alt="Image" class="img-responsive">
+                    </a>
+                    <div class="card-container">
+                      <h4>005/006</h4>
+                      <h3>Crypto Wallet</h3>
+                      <p>Web app integrated with Auth0 for user authentication</p>
+                      <a href="./crypto-wallet.html" class="btn btn-default">Discover</a>
+                    </div>
+                  </div>
                   <div class="col-sm-4">
                     <a href="./work4.html" class="">
                       <img src="./static/assets/images/Music.jpg" alt="Image" class="img-responsive">
@@ -119,41 +143,54 @@
                       <a href="./work4.html" class="btn btn-default">Discover</a>
                     </div>
                   </div>
-                   <div class="col-sm-4">
-                      <a href="./work5.html" class="">
-                        <img src="./static/assets/images/Coffee.jpg" alt="Image" class="img-responsive">
-                      </a>
-                      <div class="card-container">
-                        <h4>005/006</h4>
-                        <h3>Coffee Shop</h3>
-                        <p>Web app integrated with Auth0 for user authentication</p>
-                        <a href="./work5.html" class="btn btn-default">Discover</a>
-                      </div>
-                    </div>
-                    
-                    <div class="col-sm-4">
-                      <a href="./work6.html" class="">
-                        <img src="./static/assets/images/udee.jpg" alt="Image" class="img-responsive">
-                      </a>
-                      <div class="card-container">
-                        <h4>006/006</h4>
-                        <h3>React E-Commerce App</h3>
-                        <p>E-commerce shop built using React.js, and Stripe api </p>
-                        <a href="./work6.html" class="btn btn-default">Discover</a>
-                      </div>
-                    </div>
                     
                 </div>
                 <!--/row-->
             </div>
             
+            <div class="item active">
+              <div class="row">
+                  <div class="col-sm-4">
+
+                    <a href="./fyrr.html" title="" class="">
+                      <img src="./static/assets/images/Fyyur.jpg" alt="" class="img-responsive">
+                    </a>
+                    <div class="card-container card-container-lg">
+                      <h4>001/006</h4>
+                      <h3>Fyyur</h3>
+                      <p>Artist and Venue Booking App.</p>
+                      <a href="./fyrr.html" title="" class="btn btn-default">Discover</a>
+                    </div>
+                  </div>
+                  <div class="col-sm-4">
+                    <a href="./Murmur.html" title="" class="">
+                      <img src="./static/assets/images/Mumur2.jpg" alt="" class="img-responsive">
+                    </a>
+                    <div class="card-container card-container-lg">
+                      <h4>002/006</h4>
+                      <h3>Murmur</h3>
+                      <p>Twitter clone made with javascript, react, node, and hosted on heroku</p>
+                      <a href="./Murmur.html" title="" class="btn btn-default">Discover</a>
+                    </div>
+                  </div>
+                  <div class="col-sm-4">
+                    <a href="./face-recognizer.html" title="" class="">
+                      <img src="./static/assets/images/Face-Recognizer.jpg" alt="" class="img-responsive">
+                    </a>
+                    <div class="card-container card-container-lg">
+                      <h4>003/006</h4>
+                      <h3>Face Recognizer</h3>
+                      <p>Web application that recognizes faces in an image</p>
+                      <a href="./face-recognizer.html" title="" class="btn btn-default">Discover</a>
+                    </div>
+                  </div>
+                  
+              </div>
+              <!--/row-->
+          </div>
             <!--/item-->
         </div>
         <!--/carousel-inner--> 
-        <a class="left carousel-control" href="#myCarousel" data-slide="prev">‹</a>
-
-        <a class="right carousel-control" href="#myCarousel" data-slide="next">›</a>
-     </div>
 
 
 
