--- a/templates/fyrr.html
+++ b/templates/fyrr.html
@@ -44,14 +44,15 @@
         </ul>
 
 
-          <ul class="nav navbar-nav navbar-right navbar-small visible-md visible-lg">
-            <li><a href="./work.html" title="Real Estate Marketplace on Blockchain" class="active">001</a></li>
-            <li><a href="./work2.html" title="" class="active">002</a></li>
-            <li><a href="./work3.html" title="" class="active">003</a></li>
-            <li><a href="./work4.html" title="" class="active">004</a></li>
-            <li><a href="./work5.html" title="" class="active">005</a></li>
-            <li><a href="./work6.html" title="" class="active">006</a></li>
-          </ul>
+
+        <ul class="nav navbar-nav navbar-right navbar-small visible-md visible-lg">
+          <li><a href="./roller-real-estate.html" title="" class="active">001</a></li>
+          <li><a href="./supply-chain.html" title="" class="active">002</a></li>
+          <li><a href="./flight-surety.html" title="" class="active">003</a></li>
+          <li><a href="./decentralized-ecommerce.html" title="Music Hub" class="active">004</a></li>
+          <li><a href="./crypto-wallet.html" title="" class="active">005</a></li>
+          <li><a href="./music-hub.html" title="" class="active">006</a></li>
+        </ul>
 
 
       </div> 
@@ -65,7 +66,7 @@
         <img src="./static/assets/images/Fyyur.jpg" class="img-responsive" alt="">
         <div class="card-container">
           <div class="text-center">
-            <h1 class="h2">001 : Fyyur</h1>
+            <h1 class="h2">007 : Fyyur</h1>
           </div>
           <p>Fyyur is a musical venue and artist booking site that facilitates the discovery and bookings of shows between local performing artists and venues. This site lets you list new artists and venues, discover them, and list shows with artists as a venue owner.
 
