--- a/templates/music-hub.html
+++ b/templates/music-hub.html
@@ -38,19 +38,19 @@
       <div class="collapse navbar-collapse" id="navbar-collapse">
         <ul class="nav navbar-nav ">
           <li><a href="./index.html" title="">01 : Home</a></li>
-          <li><a href="./works.html" title="">02 : Works</a></li>
+          <li><a href="./works.html" title="">02 : Portfolio</a></li>
           <li><a href="./about.html" title="">03 : About me</a></li>
           <li><a href="./contact.html" title="">04 : Contact</a></li>
         </ul>
 
 
           <ul class="nav navbar-nav navbar-right navbar-small visible-md visible-lg">
-            <li><a href="./work.html" title="Fyyur" class="active">001</a></li>
-            <li><a href="./work2.html" title="Murmur" class="active">002</a></li>
-            <li><a href="./work3.html" title="Face Recognizer" class="active">003</a></li>
-            <li><a href="./work4.html" title="Music Hub" class="active">004</a></li>
-            <li><a href="./work5.html" title="" class="active">005</a></li>
-            <li><a href="./work6.html" title="" class="active">006</a></li>
+            <li><a href="./roller-real-estate.html" title="" class="active">001</a></li>
+            <li><a href="./supply-chain.html" title="" class="active">002</a></li>
+            <li><a href="./flight-surety.html" title="" class="active">003</a></li>
+            <li><a href="./decentralized-ecommerce.html" title="Music Hub" class="active">004</a></li>
+            <li><a href="./crypto-wallet.html" title="" class="active">005</a></li>
+            <li><a href="./music-hub.html" title="" class="active">006</a></li>
           </ul>
 
 
@@ -65,7 +65,7 @@
         <img src="./static/assets/images/Music.jpg" class="img-responsive" alt="">
         <div class="card-container">
           <div class="text-center">
-            <h1 class="h2">004 : Music Hub</h1>
+            <h1 class="h2">006 : Music Hub</h1>
           </div>
           <p>Music hub is a web application targeted at Japanese music fans to and also functions as a tool to help them better understand the meaning and certain nuances behind the lyrics in western music.</p>
 
