--- a/templates/roller-real-estate.html
+++ b/templates/roller-real-estate.html
@@ -38,20 +38,20 @@
       <div class="collapse navbar-collapse" id="navbar-collapse">
         <ul class="nav navbar-nav ">
           <li><a href="./index.html" title="">01 : Home</a></li>
-          <li><a href="./services.html" title="">02 : Services</a></li>
+          <!-- <li><a href="./services.html" title="">02 : Services</a></li> -->
           <li><a href="./works.html" title="">03 : Portfolio</a></li>
           <li><a href="./about.html" title="">04 : About me</a></li>
           <li><a href="./contact.html" title="">05 : Contact</a></li>
         </ul>
 
 
-          <ul class="nav navbar-nav navbar-right navbar-small visible-md visible-lg">
-            <li><a href="./work.html" title="Real Estate Marketplace on Blockchain" class="active">001</a></li>
-            <li><a href="./work2.html" title="" class="active">002</a></li>
-            <li><a href="./work3.html" title="" class="active">003</a></li>
-            <li><a href="./work4.html" title="" class="active">004</a></li>
-            <li><a href="./work5.html" title="" class="active">005</a></li>
-            <li><a href="./work6.html" title="" class="active">006</a></li>
+        <ul class="nav navbar-nav navbar-right navbar-small visible-md visible-lg">
+            <li><a href="./roller-real-estate.html" title="" class="active">001</a></li>
+            <li><a href="./supply-chain.html" title="" class="active">002</a></li>
+            <li><a href="./flight-surety.html" title="" class="active">003</a></li>
+            <li><a href="./decentralized-ecommerce.html" title="Music Hub" class="active">004</a></li>
+            <li><a href="./crypto-wallet.html" title="" class="active">005</a></li>
+            <li><a href="./music-hub.html" title="" class="active">006</a></li>
           </ul>
 
 
