--- a/templates/works.html
+++ b/templates/works.html
@@ -38,7 +38,6 @@
       <div class="collapse navbar-collapse" id="navbar-collapse">
         <ul class="nav navbar-nav ">
           <li><a href="./index.html" title="">01 : Home</a></li>
-          <li><a href="./services.html" title="">01 : Services</a></li>
           <li><a href="./works.html" title="">02 : Portfolio</a></li>
           <li><a href="./about.html" title="">03 : About me</a></li>
           <li><a href="./contact.html" title="">04 : Contact</a></li>
@@ -56,8 +55,8 @@
       
       <div class="col-sm-8 col-sm-offset-2 section-container-spacer">
         <div class="text-center">
-          <h1 class="h2">02 : Works</h1>
-          <p>Below are just a few full stack projects Blockchain projects that I've built</p>
+          <h1 class="h2">02 : Portfolio</h1>
+          <p>Below are just a few Blockchain Development, and full stack web development projects that I've built</p>
         </div>
       </div>
 
@@ -73,7 +72,7 @@
                         <img src="./static/assets/images/jason-dent-w3eFhqXjkZE-unsplash.jpeg" alt="" class="img-responsive">
                       </a>
                       <div class="card-container card-container-lg">
-                        <h4>001/006</h4>
+                        <h4>001/009</h4>
                         <h3>Roller Real Estate</h3>
                         <p>Real Estate Marketplace with personalized Erc20 token on the Ethereum Network</p>
                         <a href="./roller-real-estate.html" title="" class="btn btn-default">Discover</a>
@@ -84,7 +83,7 @@
                         <img src="./static/assets/images/timelab-pro-CfKV0CecnU8-unsplash.jpeg" alt="" class="img-responsive">
                       </a>
                       <div class="card-container card-container-lg">
-                        <h4>002/006</h4>
+                        <h4>002/009</h4>
                         <h3>Decentralized Supply Chain</h3>
                         <p>This project project provides a supply chain solution integrated with the Ethereum network</p>
                         <!-- <p>It features smart contracts that provides the ability to track user specific permission controls throughout the supply chain</p>
@@ -97,9 +96,9 @@
                         <img src="./static/assets/images/s-o-c-i-a-l-c-u-t-96A9UTFAMUM-unsplash.jpeg" alt="" class="img-responsive">
                       </a>
                       <div class="card-container card-container-lg">
-                        <h4>003/006</h4>
+                        <h4>003/009</h4>
                         <h3>Flight Surety</h3>
-                        <p>Web application that recognizes faces in an image</p>
+                        <p>Flight insurance Dapp</p>
                         <a href="./flight-surety.html" title="" class="btn btn-default">Discover</a>
                       </div>
                     </div>
@@ -115,7 +114,7 @@
                       <img src="./static/assets/images/udee.jpg" alt="Image" class="img-responsive">
                     </a>
                     <div class="card-container">
-                      <h4>006/006</h4>
+                      <h4>006/009</h4>
                       <h3>Decentralized E-commerce Dapp</h3>
                       <p>E-commerce shop built using React.js, and Stripe api </p>
                       <a href="./decentralized-ecommerce.html" class="btn btn-default">Discover</a>
@@ -126,21 +125,21 @@
                       <img src="./static/assets/images/bermix-studio-aX1hN4uNd-I-unsplash.jpeg" alt="Image" class="img-responsive">
                     </a>
                     <div class="card-container">
-                      <h4>005/006</h4>
+                      <h4>005/009</h4>
                       <h3>Crypto Wallet</h3>
                       <p>Web app integrated with Auth0 for user authentication</p>
                       <a href="./crypto-wallet.html" class="btn btn-default">Discover</a>
                     </div>
                   </div>
                   <div class="col-sm-4">
-                    <a href="./work4.html" class="">
+                    <a href="./music-hub.html" class="">
                       <img src="./static/assets/images/Music.jpg" alt="Image" class="img-responsive">
                     </a>
                     <div class="card-container">
-                      <h4>004/006</h4>
+                      <h4>006/009</h4>
                       <h3>Music Hub</h3>
                       <p>A user-based lyric trsanlation website</p>
-                      <a href="./work4.html" class="btn btn-default">Discover</a>
+                      <a href="./music-hub.html" class="btn btn-default">Discover</a>
                     </div>
                   </div>
                     
@@ -156,7 +155,7 @@
                       <img src="./static/assets/images/Fyyur.jpg" alt="" class="img-responsive">
                     </a>
                     <div class="card-container card-container-lg">
-                      <h4>001/006</h4>
+                      <h4>007/009</h4>
                       <h3>Fyyur</h3>
                       <p>Artist and Venue Booking App.</p>
                       <a href="./fyrr.html" title="" class="btn btn-default">Discover</a>
@@ -167,7 +166,7 @@
                       <img src="./static/assets/images/Mumur2.jpg" alt="" class="img-responsive">
                     </a>
                     <div class="card-container card-container-lg">
-                      <h4>002/006</h4>
+                      <h4>008/009</h4>
                       <h3>Murmur</h3>
                       <p>Twitter clone made with javascript, react, node, and hosted on heroku</p>
                       <a href="./Murmur.html" title="" class="btn btn-default">Discover</a>
@@ -178,7 +177,7 @@
                       <img src="./static/assets/images/Face-Recognizer.jpg" alt="" class="img-responsive">
                     </a>
                     <div class="card-container card-container-lg">
-                      <h4>003/006</h4>
+                      <h4>009/009</h4>
                       <h3>Face Recognizer</h3>
                       <p>Web application that recognizes faces in an image</p>
                       <a href="./face-recognizer.html" title="" class="btn btn-default">Discover</a>
